--- a/Zadanie 6/index.html
+++ b/Zadanie 6/index.html
@@ -33,7 +33,7 @@
        <li>pensjonat</li>
        <li>namioty na łące</li>
       </ul>
-      <a href="page1.html">Zobacz ładne zdjęcie</a>
+      <a href="page1.html">Zobacz ładne zdjęcia</a>
       <p></p>
       <a href="https://pl.wikipedia.org/wiki/Tatry">Dowiedz się więcej o tatrach</a>
       <p>  </p>
